# ChangeLog for net-libs/libwww
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libwww/ChangeLog,v 1.77 2007/07/12 10:21:05 uberlord Exp $

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> libwww-5.4.0-r7.ebuild:
  Keyworded ~sparc-fbsd.

  12 May 2007; Joshua Kinard <kumba@gentoo.org> libwww-5.4.0-r7.ebuild:
  Stable on mips.

  20 Dec 2006; Alexandre Buisse <nattfodd@gentoo.org>
  libwww-5.4.0-r3.ebuild, libwww-5.4.0-r4.ebuild, libwww-5.4.0-r5.ebuild,
  libwww-5.4.0-r6.ebuild, libwww-5.4.0-r7.ebuild:
  Removed unnecessary block of 9lib (bug #132120).

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> libwww-5.4.0-r3.ebuild,
  libwww-5.4.0-r4.ebuild, libwww-5.4.0-r5.ebuild, libwww-5.4.0-r6.ebuild,
  libwww-5.4.0-r7.ebuild:
  dev-db/mysql => virtual/mysql

  04 Nov 2006; <blubb@gentoo.org> libwww-5.4.0-r7.ebuild:
  stable on amd64

  01 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> libwww-5.4.0-r7.ebuild:
  Stable on Alpha, bug 150198.

  20 Oct 2006; Paul Varner <fuzzyray@gentoo.org> libwww-5.4.0-r7.ebuild:
  x86 stable - bug #150198

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libwww-5.4.0-r7.ebuild:
  hppa stable, bug #150198

  15 Oct 2006; Jason Wever <weeve@gentoo.org> libwww-5.4.0-r7.ebuild:
  Stable on SPARC wrt bug #150198.

  14 Oct 2006; Markus Rothe <corsair@gentoo.org> libwww-5.4.0-r7.ebuild:
  Stable on ppc64; bug #150198

  13 Oct 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  libwww-5.4.0-r7.ebuild:
  stable on ppc (Bug #150198)

*libwww-5.4.0-r7 (08 Oct 2006)

  08 Oct 2006; Mike Frysinger <vapier@gentoo.org> +libwww-5.4.0-r7.ebuild:
  Fix the as-needed patch again #150198 and move patches into a tarball on the
  mirrors.

  05 Oct 2006; Fabian Groffen <grobian@gentoo.org>
  -files/libwww-5.4.0-automake-macos.patch, libwww-5.4.0-r3.ebuild,
  libwww-5.4.0-r4.ebuild, libwww-5.4.0-r5.ebuild, libwww-5.4.0-r6.ebuild:
  Dropped ppc-macos keyword, see you in prefix.
