@@ -9,8 +9,8 @@ AUX libwww-5.4.0-mysql-4.0.patch 1674 RMD160 0f9bdfe400357b947314f50c935bf7fcff5
 AUX libwww-5.4.0-noexport.patch 402 RMD160 0074a161a985b08fa797dd91decea320a23f1dfd SHA1 30242525c24e97088f3fa122060a1369bebb1877 SHA256 f2fa63b1d94ebdec9b77dd6758222e2e6fb232b467b0c5f3f5efaa8ec2265c55
 AUX libwww-5.4.0-respectflags.patch 1673 RMD160 751551e3d0c104e4b6a6f81fa815100d28200e37 SHA1 d98268d2236bb1c6e57d4e0e60f3d9bf441fd17f SHA256 23e24af3d68ad8c33114440e25c6d0678aa4fec71988280c27a90d166b6f825f
 AUX libwww-config-liborder.patch 776 RMD160 c6b2f017f1c2ecb036aca3e6d497a1e2fc2e2d6f SHA1 93c6ff7912aec6ea085cda65447b0aae0156c125 SHA256 01aa28bd0516ccfff053c07e02a0c323e0403a86be1845d6d5671e776a95d6d2
-DIST libwww-5.4.0-patches-1.0.tar.bz2 15243 RMD160 192f94f2ac697ccf7f6d4bf611798432d8a8aaa5 SHA1 cf3821120e762dd75a239cf78091bce250e867f0 SHA256 d06ff10870beaa26d20bfd46cbb34b4b2400526f5ebcafa70f1b095709f273f4
+DIST libwww-5.4.0-patches-1.2.tar.bz2 16146 RMD160 6bf4484c018bf9c21d822bb3b433c8d491026967 SHA1 55c40c74e6e8b4e020a9307ecb09a59906398e98 SHA256 ad3d1c37f1421bd46d283ac30af3df2bd645c7498525578430e26629cfb3cf88
 DIST w3c-libwww-5.4.0.tgz 1129121 RMD160 12e55ecb2435f9048d627e56f8ae60d4c246648b SHA1 2394cb4e0dc4e2313a9a0ddbf508e4b726e9af63 SHA256 64841cd99a41c84679cfbc777ebfbb78bdc2a499f7f6866ccf5cead391c867ef
-EBUILD libwww-5.4.0-r7.ebuild 1590 RMD160 ffcfc2a8444ee5d65ab744a9e335c8a22455b7fa SHA1 4152b8900cde1912af7968412d06ca2ec5c91a01 SHA256 acc6e897bbc8ef69643a72b6185761b6c4d3ae4a5a92435b424b38a96ee070b8
-MISC ChangeLog 11207 RMD160 1245306a45d9fae71a9ebe33dd2f1a1f4827fa31 SHA1 c470932ee132220a853853d1e27f9cbe1bff8ef4 SHA256 156c7c87df356dbed01e2f8f953395bd568ba80569ffb7296b4adc2ab7078286
+EBUILD libwww-5.4.0-r7.ebuild 1464 RMD160 887720f6106c0b22bc2b89e587cc9ba824f7ed17 SHA1 2d1e05ce2f2222d90786f285ece986786616040a SHA256 fbc0f2ad4ac93a73e725604b41e7c0ed99f329f7617780e131e91ac9ba813a1f
+MISC ChangeLog 11442 RMD160 6503fd1bc51a8f52255ac2953cc436307dd311b7 SHA1 0f43bce902e53238f91f9f903e7e96fbb66568f5 SHA256 a0d56f293bfb53fa38ea7a44c200f443c5bdab61fe9e64026f30e5203e195e06
 MISC metadata.xml 164 RMD160 698422e821458386b8da17baa6014296f8284e0b SHA1 a805613d38e6e3bff93cba3858d6a92cc79fe2f7 SHA256 7bd4d93c657a26aa9af1dea4232520c0d388cc92115dd9ca0eb04259228e044f
