@@ -1,17 +1,16 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libwww/libwww-5.4.0-r7.ebuild,v 1.13 2007/07/12 10:21:05 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libwww/libwww-5.4.0-r7.ebuild,v 1.16 2010/07/18 21:44:00 ssuominen Exp $
 
-WANT_AUTOMAKE="latest"
-WANT_AUTOCONF="latest"
 inherit eutils multilib autotools
 
-PATCHVER="1.0"
+PATCHVER="1.2"
 MY_P=w3c-${P}
+
 DESCRIPTION="A general-purpose client side WEB API"
 HOMEPAGE="http://www.w3.org/Library/"
 SRC_URI="http://www.w3.org/Library/Distribution/${MY_P}.tgz
-	mirror://gentoo/${P}-patches-${PATCHVER}.tar.bz2"
+	http://dev.gentoo.org/~ssuominen/${P}-patches-${PATCHVER}.tar.bz2"
 
 LICENSE="W3C"
 SLOT="0"
@@ -34,11 +33,11 @@ src_unpack() {
 	EPATCH_SUFFIX="patch" epatch "${WORKDIR}"/patch
 	epatch "${FILESDIR}"/${P}-more-ssl-fixing.patch
 	epatch "${FILESDIR}"/${P}-interix.patch
-	eautoreconf || die "autoreconf failed"
+	eautoreconf
 }
 
 src_compile() {
-	if use mysql ; then
+	if use mysql; then
 		myconf="--with-mysql=${EPREFIX}/usr/$(get_libdir)/mysql/libmysqlclient.a"
 	else
 		myconf="--without-mysql"
@@ -52,13 +51,13 @@ src_compile() {
 		--with-md5 \
 		--with-expat \
 		$(use_with ssl) \
-		${myconf} || die "./configure failed"
+		${myconf}
 
-	emake || die "Compilation failed"
+	emake || die
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "Installation failed"
+	emake DESTDIR="${D}" install || die
 	dodoc ChangeLog
 	dohtml -r .
 }
